# Typst.NET

./: Directory.Build.props  Directory.Packages.props  LICENSE.md  README.md  Typst.NET.slnx  global.json
src/Typst.NET/: CompileResult.cs  Typst.NET.csproj  TypstCompilationException.cs  TypstCompiler.cs  TypstCompilerOptions.cs  TypstException.cs
src/Typst.NET/Diagnostics/: Diagnostic.cs  DiagnosticSeverity.cs  SourceLocation.cs
src/Typst.NET/Export/: Document.cs
src/Typst.NET/Interop/: InteropHelpers.cs  NativeMethods.cs  NativeTypes.cs  SafeCompilerHandle.cs  SafeDocumentHandle.cs
src/tests/Typst.NET.Tests/: BasicCompilationTests.cs  CompilerStateTests.cs  DiagnosticTests.cs  EdgeCaseTests.cs  FontTests.cs  InputTests.cs  IntegrationTests.cs  MemorySafetyTests.cs  PackageTests.cs  PdfInputsIntegrationTests.cs  PdfRenderingTests.cs  RenderingTests.cs  Typst.NET.Tests.csproj  VfsTests.cs
typst-net-core/: Cargo.toml  build.rs
typst-net-core/src/: compiler.rs  document.rs  lib.rs  memory.rs  types.rs  typst_backend.rs
